adiciona versão do WhatsApp Web para o canal Baileys no arquivo .env

--- a/.env
+++ b/.env
@@ -10,6 +10,10 @@ CORS_ORIGIN=*
 CORS_METHODS=GET,POST,PUT,DELETE
 CORS_CREDENTIALS=true
 
+# Whatsapp Web version for baileys channel
+# https://web.whatsapp.com/check-update?version=0&platform=web
+CONFIG_SESSION_PHONE_VERSION=2.3000.1029037448
+
 # Determine the logs to be displayed
 LOG_LEVEL=ERROR,WARN,DEBUG,INFO,LOG,VERBOSE,DARK,WEBHOOKS,WEBSOCKET
 LOG_COLOR=true
